update pcca docs

--- a/docs/source/notebooks/pcca.ipynb
+++ b/docs/source/notebooks/pcca.ipynb
@@ -6,15 +6,16 @@
    "source": [
     "# Coarse-graining with PCCA+\n",
     "\n",
-    "Given a Markov state model describing a reversible Markov chain, i.e., given transition matrix $P\\in\\mathbb{R}^{n\\times n}$ with stationary distribution $\\pi$ it obeys the detailed balance condition\n",
-    "\n",
-    "$$ \\pi_i P_{ij} = \\pi_j P_{ji}, $$\n",
-    "\n",
-    "its transition matrix can be coarse grained into metastable sets using the spectral clustering algorithm \"Robust Perron Cluster Analysis\" (PCCA+) <cite data-cite=\"nbpcca-roblitz2013fuzzy\">(Röblitz, 2013)</cite>. The result of the clustering is a coarse-grained transition matrix\n",
+    "Robust Perron Cluster Analysis (PCCA+)<cite data-cite=\"nbpcca-roblitz2013fuzzy\">(Röblitz, 2013)</cite> is a successor the method PCCA in <cite data-cite=\"nbpcca-deuflhard2000identification\">(Deuflhard, 2000)</cite> which appeared to be not robust enough. It is a method which, given a [Markov state model](../index_msm.rst) with transition matrix $P\\in\\mathbb{R}^{n\\times n}$, can cluster together (sometimes also referred to as coarse-grain) the $n$ _micro_states into $m<n$ _metastable sets_ of states between which also a transition matrix \n",
     "\n",
     "$$ P_\\mathrm{macro}\\in\\mathbb{R}^{m\\times m} $$\n",
     "\n",
-    "as well as membership probabilities $M\\in\\mathbb{R}^{n\\times m}$ giving a probability distribution of membership for each macrostate to each microstate."
+    "is defined. The method works off of the assumption that the underlying Markov chain is reversible, i.e., given the stationary distribution $\\pi$ it obeys the detailed balance condition\n",
+    "\n",
+    "$$ \\pi_i P_{ij} = \\pi_j P_{ji}. $$ \n",
+    "\n",
+    "The result of the clustering is not only the coarse-grained transition matrix\n",
+    "but one also obtains membership probabilities $M\\in\\mathbb{R}^{n\\times m}$ giving a probability distribution of membership for each macrostate to each microstate. In comparison to its predecessor PCCA, PCCA+ has fuzzy memberships, while PCCA's are crisp."
    ]
   },
   {
@@ -40,7 +41,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can visualize the time series as follows. Note that the probability to jump from one ellipsoid to the other  is at $3\\%$ for each frame."
+    "We can visualize the time series as follows. Note that the probability to jump from one ellipsoid to the other  is at $3\\%$ for each frame/data point."
    ]
   },
   {
@@ -60,7 +61,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To arrive at a Markov state model, let us cluster the data and assign the frames to the cluster centers."
+    "To arrive at a [Markov state model](../api/generated/sktime.markov.msm.MarkovStateModel.rst#sktime.markov.msm.MarkovStateModel), let us [cluster](../notebooks/clustering.ipynb) the data and assign the frames to the cluster centers."
    ]
   },
   {
@@ -69,7 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clustering = sktime.clustering.KmeansClustering(n_clusters=20, fixed_seed=13) \\\n",
+    "clustering = sktime.clustering.KmeansClustering(n_clusters=50, fixed_seed=13) \\\n",
     "    .fit(data).fetch_model()\n",
     "assignments = clustering.transform(data)"
    ]
@@ -80,9 +81,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f, ax = plt.subplots(1, 1, figsize=(12, 5))\n",
-    "ax.scatter(*data.T, c=assignments/np.max(assignments))\n",
-    "ax.scatter(*clustering.cluster_centers.T, marker=\"*\", c='red', label='Cluster centers');\n",
+    "f, ax = plt.subplots(1, 1, figsize=(18, 5))\n",
+    "ax.scatter(*data.T, c=assignments/np.max(assignments), cmap=plt.cm.rainbow)\n",
+    "ax.scatter(*clustering.cluster_centers.T, marker=\"o\", c='black', label='Cluster centers')\n",
+    "for i in range(clustering.n_clusters):\n",
+    "    ax.annotate(f\"{i}\", clustering.cluster_centers[i], \n",
+    "                xytext=clustering.cluster_centers[i]+.1)\n",
     "ax.set_title('cluster center assignments')"
    ]
   },
@@ -109,7 +113,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Plotting the transition matrix, it is not immediately obvious that there are two metastable sets. With a connectivity threshold discarding weaker connections, one can guess it (i.e., the degree of connectedness within one metastable set is much higher than between them), but this is not always possible and also not very rigorous."
+    "Plotting the transition matrix with a connectivity threshold discarding weaker connections, one can guess that there are two metastable sets based on the degree of connectedness within one metastable being much higher than in between - but this is not always possible and also not very rigorous."
    ]
   },
   {
@@ -120,36 +124,32 @@
    "source": [
     "import networkx as nx\n",
     "\n",
-    "fig, axes = plt.subplots(1, 2, figsize=(15, 10))\n",
+    "fig, ax = plt.subplots(1, 1, figsize=(10, 10))\n",
     "\n",
-    "for i in range(len(axes)):\n",
-    "    threshold = 0 if i == 0 else 1e-2\n",
-    "    ax = axes[i]\n",
-    "    title = \"Transition matrix\"\n",
-    "    if i == 1:\n",
-    "        title += f\" with connectivity threshold {threshold:.0e}\"\n",
-    "    G = nx.DiGraph()\n",
-    "    ax.set_title(title)    \n",
-    "    for i in range(msm.n_states):\n",
-    "        G.add_node(i, title=f\"{i+1}\")\n",
-    "    for i in range(msm.n_states):\n",
-    "        for j in range(msm.n_states):\n",
-    "            if msm.transition_matrix[i, j] > threshold:\n",
-    "                G.add_edge(i, j, title=f\"{msm.transition_matrix[i, j]:.3e}\")\n",
+    "threshold = 1e-2\n",
+    "title = f\"Transition matrix with connectivity threshold {threshold:.0e}\"\n",
+    "G = nx.DiGraph()\n",
+    "ax.set_title(title)    \n",
+    "for i in range(msm.n_states):\n",
+    "    G.add_node(i, title=f\"{i+1}\")\n",
+    "for i in range(msm.n_states):\n",
+    "    for j in range(msm.n_states):\n",
+    "        if msm.transition_matrix[i, j] > threshold:\n",
+    "            G.add_edge(i, j, title=f\"{msm.transition_matrix[i, j]:.3e}\")\n",
     "\n",
-    "    edge_labels = nx.get_edge_attributes(G, 'title')\n",
-    "    pos = nx.fruchterman_reingold_layout(G)\n",
-    "    nx.draw_networkx_nodes(G, pos, ax=ax)\n",
-    "    nx.draw_networkx_labels(G, pos, ax=ax, labels=nx.get_node_attributes(G, 'title'));\n",
-    "    nx.draw_networkx_edges(G, pos, ax=ax, arrowstyle='-|>',\n",
-    "                           connectionstyle='arc3, rad=0.3');"
+    "edge_labels = nx.get_edge_attributes(G, 'title')\n",
+    "pos = nx.fruchterman_reingold_layout(G)\n",
+    "nx.draw_networkx_nodes(G, pos, ax=ax)\n",
+    "nx.draw_networkx_labels(G, pos, ax=ax, labels=nx.get_node_attributes(G, 'title'));\n",
+    "nx.draw_networkx_edges(G, pos, ax=ax, arrowstyle='-|>',\n",
+    "                       connectionstyle='arc3, rad=0.3');"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To make it rigorous, let us apply PCCA+ with two metastable sets:"
+    "To make it rigorous, let us apply PCCA+ with two metastable sets (in general there might be more, this highly depends on the data):"
    ]
   },
   {
@@ -250,10 +250,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(10, 5))\n",
-    "plt.plot(np.arange(msm.n_states)+1, pcca.metastable_distributions[0], 'o', label=\"Metastable set 1\")\n",
-    "plt.plot(np.arange(msm.n_states)+1, pcca.metastable_distributions[1], 'x', label=\"Metastable set 2\")\n",
-    "plt.xticks(np.arange(msm.n_states)+1)\n",
+    "ix = np.argsort(pcca.assignments)\n",
+    "plt.figure(figsize=(18, 5))\n",
+    "plt.plot(np.arange(msm.n_states)+1, pcca.metastable_distributions[0][ix], 'o', label=\"Metastable set 1\")\n",
+    "plt.plot(np.arange(msm.n_states)+1, pcca.metastable_distributions[1][ix], 'x', label=\"Metastable set 2\")\n",
+    "plt.xticks(np.arange(msm.n_states)+1, [f\"{i}\" for i in ix])\n",
     "plt.title(\"Metastable distributions\")\n",
     "plt.legend()\n",
     "plt.xlabel('micro state')\n",
@@ -271,7 +272,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For visualization purposes, one can obtain the crisp assignments of microstates to macrostates through:"
+    "For visualization purposes - as in the plot above - one can obtain the crisp assignments of microstates to macrostates through:"
    ]
   },
   {
@@ -322,7 +323,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
