--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -411,3 +411,11 @@
   year={1984},
   publisher={American Mathematical Soc.}
 }
+@article{deuflhard2000identification,
+  title={Identification of almost invariant aggregates in reversible nearly uncoupled Markov chains},
+  author={Deuflhard, P and Huisinga, W and Fischer, A and Sch{\"u}tte, Ch},
+  journal={Linear Algebra and its Applications},
+  volume={315},
+  pages={39--59},
+  year={2000}
+}
