--- a/docs/source/notebooks/pcca.ipynb
+++ b/docs/source/notebooks/pcca.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Coarse-graining with PCCA+\n",
     "\n",
-    "Robust Perron Cluster Analysis (PCCA+)<cite data-cite=\"nbpcca-roblitz2013fuzzy\">(Röblitz, 2013)</cite> is a successor the method PCCA in <cite data-cite=\"nbpcca-deuflhard2000identification\">(Deuflhard, 2000)</cite> which appeared to be not robust enough. It is a method which, given a [Markov state model](../index_msm.rst) with transition matrix $P\\in\\mathbb{R}^{n\\times n}$, can cluster together (sometimes also referred to as coarse-grain) the $n$ _micro_states into $m<n$ _metastable sets_ of states between which also a transition matrix \n",
+    "Robust Perron Cluster Analysis (PCCA+) <cite data-cite=\"nbpcca-roblitz2013fuzzy\">(Röblitz, 2013)</cite> is a successor the method PCCA in <cite data-cite=\"nbpcca-deuflhard2000identification\">(Deuflhard, 2000)</cite>, a spectral clustering algorithm which crisply assigns microstates to clusters. The assignments in PCCA are based on signs of components of eigenvectors, which behaves instably if they are close to zero. That behavior lead to the development of PCCA+, which uses fuzzy assignments rather than crisp ones. Given a [Markov state model](../index_msm.rst) with transition matrix $P\\in\\mathbb{R}^{n\\times n}$, PCCA+ can cluster together (sometimes also referred to as coarse-grain) the $n$ *micro*states into $m<n$ *metastable sets* of states between which also a transition matrix \n",
     "\n",
     "$$ P_\\mathrm{macro}\\in\\mathbb{R}^{m\\times m} $$\n",
     "\n",
@@ -15,7 +15,7 @@
     "$$ \\pi_i P_{ij} = \\pi_j P_{ji}. $$ \n",
     "\n",
     "The result of the clustering is not only the coarse-grained transition matrix\n",
-    "but one also obtains membership probabilities $M\\in\\mathbb{R}^{n\\times m}$ giving a probability distribution of membership for each macrostate to each microstate. In comparison to its predecessor PCCA, PCCA+ has fuzzy memberships, while PCCA's are crisp."
+    "but one also obtains membership probabilities $M\\in\\mathbb{R}^{n\\times m}$ giving a probability distribution of membership for each macrostate to each microstate."
    ]
   },
   {
@@ -323,7 +323,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
