[markov.tools] integrate docs

--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -419,3 +419,19 @@
   pages={39--59},
   year={2000}
 }
+@book{hoel1986introduction,
+  title={Introduction to stochastic processes},
+  author={Hoel, Paul G and Port, Sidney C and Stone, Charles J},
+  year={1986},
+  publisher={Waveland Press}
+}
+@article{tarjan1972depth,
+  title={Depth-first search and linear graph algorithms},
+  author={Tarjan, Robert},
+  journal={SIAM journal on computing},
+  volume={1},
+  number={2},
+  pages={146--160},
+  year={1972},
+  publisher={SIAM}
+}
