--- a/docs/source/notebooks/hmm.ipynb
+++ b/docs/source/notebooks/hmm.ipynb
@@ -28,7 +28,7 @@
     "- an [output model](../api/generated/sktime.markov.hmm.OutputModel.rst#sktime.markov.hmm.OutputModel), which holds information on the emission probabilities,\n",
     "- and an initial distribution $\\pi\\in\\mathbb{R}^n$ over the hidden states, which expresses a prior belief over the average most likely distribution of hidden states.\n",
     "\n",
-    "Creating an [HMM](../api/generated/sktime.markov.hmm.HiddenMarkovStateModel.rst#sktime.markov.hmm.HiddenMarkovStateModel) is as simple as importing sktime and fixing at least the transition model and the output model.\n",
+    "Creating an [HMM](../api/generated/sktime.markov.hmm.HiddenMarkovModel.rst#sktime.markov.hmm.HiddenMarkovModel) is as simple as importing sktime and fixing at least the transition model and the output model.\n",
     "\n",
     "Here $P\\in\\mathbb{R}^{2\\times 2}$ is the hidden transition matrix and $E\\in\\mathbb{R}^{2\\times 3}$ are the emission probabilities mapping from two hidden states to two three-state output probability distributions:"
    ]
