--- a/docs/source/notebooks/tpt.ipynb
+++ b/docs/source/notebooks/tpt.ipynb
@@ -316,7 +316,7 @@
     "caxes = [divider.append_axes(\"right\", size=\"5%\", pad=0.05) for divider in dividers]\n",
     "\n",
     "titles = [\"Gross flux\", \"Net flux\"]\n",
-    "fluxes = [flux.gross_flux.m, flux.net_flux.m]\n",
+    "fluxes = [flux.gross_flux, flux.net_flux]\n",
     "\n",
     "cmap = plt.cm.copper_r\n",
     "thresh = [0, 1e-12]\n",
@@ -354,7 +354,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f\"Total flux = {flux.total_flux.m:.3e}/step\")"
+    "print(f\"Total flux = {flux.total_flux:.3e}/step\")"
    ]
   },
   {
@@ -374,7 +374,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f'Rate = {flux.rate.m:.3e}/step')"
+    "print(f'Rate = {flux.rate:.3e}/step')"
    ]
   },
   {
@@ -390,7 +390,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f'MFPT = {flux.mfpt.m:.3f} steps')"
+    "print(f'MFPT = {flux.mfpt:.3f} steps')"
    ]
   },
   {
@@ -523,7 +523,7 @@
     "    \n",
     "    ax.set_title(\"Gross flux\" if i == 0 else \"Net flux\")\n",
     "    \n",
-    "    F = tpt.gross_flux.m if i == 0 else tpt.net_flux.m\n",
+    "    F = tpt.gross_flux if i == 0 else tpt.net_flux\n",
     "    G = graphs[i]\n",
     "    for i in range(len(sets)):\n",
     "        G.add_node(i, title=f\"Set {i+1}\")\n",
@@ -782,7 +782,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
