[notebooks] tica and vamp api update

--- a/docs/source/notebooks/tica.ipynb
+++ b/docs/source/notebooks/tica.ipynb
@@ -77,7 +77,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tica = sktime.decomposition.TICA()"
+    "tica = sktime.decomposition.TICA(lagtime=1)"
    ]
   },
   {
@@ -98,7 +98,7 @@
    "outputs": [],
    "source": [
     "data = np.random.uniform(size=(1000, 5))\n",
-    "tica.fit(data, lagtime=1)"
+    "tica.fit(data)"
    ]
   },
   {
@@ -286,7 +286,8 @@
    "outputs": [],
    "source": [
     "tica = sktime.decomposition.TICA(\n",
-    "    dim=1  # fix projection dimension explicitly\n",
+    "    dim=1,  # fix projection dimension explicitly\n",
+    "    lagtime=1\n",
     ")"
    ]
   },
@@ -496,7 +497,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tica = sktime.decomposition.TICA(dim=1)"
+    "tica = sktime.decomposition.TICA(lagtime=1, dim=1)"
    ]
   },
   {
@@ -529,7 +530,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tica_model_reweighted = tica.fit(feature_trajectory, lagtime=1, weights=reweighting_model) \\\n",
+    "tica_model_reweighted = tica.fit(feature_trajectory, weights=reweighting_model) \\\n",
     "    .fetch_model()"
    ]
   },
@@ -598,7 +599,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
