--- a/docs/source/notebooks/vamp.ipynb
+++ b/docs/source/notebooks/vamp.ipynb
@@ -121,7 +121,7 @@
     "\n",
     "# ---- or ----\n",
     "\n",
-    "model = sktime.decomposition.VAMP(dim=1).fit(feature_trajectory, lagtime=1).fetch_model()"
+    "model = sktime.decomposition.VAMP(lagtime=1, dim=1).fit(feature_trajectory).fetch_model()"
    ]
   },
   {
@@ -601,7 +601,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = sktime.decomposition.VAMP().fit(kde_trajectory, lagtime=100).fetch_model()"
+    "model = sktime.decomposition.VAMP(lagtime=100).fit(kde_trajectory).fetch_model()"
    ]
   },
   {
@@ -798,7 +798,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
