--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -435,3 +435,13 @@
   year={1972},
   publisher={SIAM}
 }
+@article{mardt2018vampnets,
+  title={VAMPnets for deep learning of molecular kinetics},
+  author={Mardt, Andreas and Pasquali, Luca and Wu, Hao and No{\'e}, Frank},
+  journal={Nature communications},
+  volume={9},
+  number={1},
+  pages={1--11},
+  year={2018},
+  publisher={Nature Publishing Group}
+}
