bickley jet datasets

--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -445,3 +445,13 @@
   year={2018},
   publisher={Nature Publishing Group}
 }
+@article{hadjighasem2016spectral,
+  title={Spectral-clustering approach to Lagrangian vortex detection},
+  author={Hadjighasem, Alireza and Karrasch, Daniel and Teramoto, Hiroshi and Haller, George},
+  journal={Physical Review E},
+  volume={93},
+  number={6},
+  pages={063107},
+  year={2016},
+  publisher={APS}
+}
