--- a/docs/source/notebooks/vampnets.ipynb
+++ b/docs/source/notebooks/vampnets.ipynb
@@ -38,13 +38,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ellipsoids dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "data_source = sktime.data.ellipsoids()\n",
-    "data = data_source.observations(100000, n_dim=5).astype(np.float32)"
+    "data_source.msm.update_transition_matrix([[.95, .05], [.09, .91]])\n",
+    "data = data_source.observations(50000, n_dim=2).astype(np.float32)\n",
+    "\n",
+    "dataset = sktime.data.TimeLaggedDataset.from_trajectory(lagtime=1, data=data)"
    ]
   },
   {
@@ -63,7 +73,7 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "import matplotlib.mlab as ml\n",
+    "import matplotlib as mpl\n",
     "from scipy.stats import multivariate_normal\n",
     "\n",
     "x = np.linspace(-8,8,500)\n",
@@ -98,8 +108,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data, val_data = train_test_split(data, test_size=.3, shuffle=False)\n",
-    "val_data_tensor = torch.tensor(val_data, requires_grad=False, device=device)"
+    "n_val = int(len(dataset)*.3)\n",
+    "train_data, val_data = torch.utils.data.random_split(dataset, [len(dataset) - n_val, n_val])"
    ]
   },
   {
@@ -115,33 +125,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Lobe(nn.Module):\n",
-    "    \n",
-    "    def __init__(self, fan_in, fan_out, n_hidden=5):\n",
-    "        super().__init__()\n",
-    "        layers = [nn.BatchNorm1d(fan_in), nn.Linear(fan_in, 20), nn.ELU()] \\\n",
-    "                 + [nn.Linear(20, 20), nn.ELU()]*(n_hidden -1) \\\n",
-    "                 + [nn.Linear(20, fan_out), nn.Softmax(1)]\n",
-    "        self._seq = nn.Sequential(*layers)\n",
-    "    \n",
-    "    def forward(self, inputs):\n",
-    "        return self._seq(inputs)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Creating an instance of the lobe."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lobe = Lobe(fan_in=data.shape[1], fan_out=2, n_hidden=3).to(device=device)"
+    "lobe = vnet.MLPLobe(units=[data.shape[1], 20, 15, 10, 6, 1], nonlinearity=lambda: nn.PReLU(),\n",
+    "                    output_nonlinearity=nn.Sigmoid)"
    ]
   },
   {
@@ -157,12 +142,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tau = 1\n",
-    "n_epochs = 50\n",
-    "batch_size = 1024\n",
-    "score_method = \"VAMP1\"\n",
+    "vampnet = vnet.VAMPNet(lagtime=1, lobe=lobe, device=device, learning_rate=1e-3, score_mode='clamp',\n",
+    "                      score_method='VAMPE')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_scores = []\n",
+    "val_scores = []\n",
     "\n",
-    "opt = torch.optim.Adam(lobe.parameters(), lr=1e-5)"
+    "def train_callback(step, score):\n",
+    "    train_scores.append((step, score.cpu().numpy()))\n",
+    "def val_callback(step, score):\n",
+    "    np_score = score.cpu().numpy()\n",
+    "    print(f\"Validation step {step}: {np_score:.5f}\")\n",
+    "    val_scores.append((step, np_score))"
    ]
   },
   {
@@ -171,17 +169,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scores_train_x = []\n",
-    "scores_train = []\n",
-    "scores_val_x = []\n",
-    "scores_val = []"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now we can train the lobe using our preferred score method."
+    "vampnet_model = vampnet.fit(train_data, batch_size=32, n_epochs=20, \n",
+    "                            validation_data=val_data, \n",
+    "                            train_score_callback=train_callback,\n",
+    "                            validation_score_callback=val_callback\n",
+    "                           ).fetch_model()"
    ]
   },
   {
@@ -190,43 +182,67 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "step = 0\n",
-    "for epoch in tqdm(range(n_epochs)):\n",
-    "    \n",
-    "    ####### TRAINING #######\n",
-    "    lobe.train()\n",
-    "    for batch_0, batch_t in sktime.data.timeshifted_split(train_data, chunksize=batch_size, \n",
-    "                                                          lagtime=tau, shuffle=True):\n",
-    "        batch_0 = torch.from_numpy(batch_0).to(device=device)\n",
-    "        batch_t = torch.from_numpy(batch_t).to(device=device)\n",
-    "        \n",
-    "        opt.zero_grad()\n",
-    "        x_0 = lobe(batch_0)\n",
-    "        x_t = lobe(batch_t)\n",
-    "        loss = vnet.loss(x_0, x_t, method=score_method)\n",
-    "        loss.backward()\n",
-    "        opt.step()\n",
-    "        \n",
-    "        scores_train_x.append(step)\n",
-    "        scores_train.append(loss.detach().cpu().numpy())\n",
-    "        step += 1\n",
-    "    \n",
-    "    ####### VALIDATION #######\n",
-    "    lobe.eval()\n",
-    "    with torch.no_grad():\n",
-    "        val = lobe(val_data_tensor)\n",
-    "        val_score = sktime.decomposition.VAMP(lagtime=tau, epsilon=1e-12)\\\n",
-    "                        .fit(val.cpu().numpy()).fetch_model().score(score_method=score_method)\n",
+    "vampnet_model = vampnet.fetch_model()\n",
+    "featurization = vampnet_model.transform(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "featurization.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(featurization[:1000]);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f, ax = plt.subplots(1, 1)\n",
+    "cm = ax.scatter(*data.T, c=featurization, cmap='coolwarm')\n",
+    "f.colorbar(cm, ax=ax);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "koopman_model = sktime.decomposition.VAMP(lagtime=1).fit(featurization).fetch_model()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(koopman_model.transform(featurization)[:1000, 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "koopman_model_direct = sktime.decomposition.VAMP(lagtime=1).fit(data).fetch_model()\n",
     "\n",
-    "        scores_val_x.append(step)\n",
-    "        scores_val.append(val_score)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The scores tell us that we did not overfit and managed to improve the VAMP score a bit by the learned featurization."
+    "print(koopman_model.score())\n",
+    "print(koopman_model_direct.score())"
    ]
   },
   {
@@ -235,16 +251,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.semilogy(scores_train_x, -np.array(scores_train), label='train')\n",
-    "plt.semilogy(scores_val_x, scores_val, label='val')\n",
-    "plt.legend();"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now we can obtain a koopman model from our learnt featurization."
+    "plt.semilogy(*np.array(train_scores).T)\n",
+    "plt.semilogy(*np.array(val_scores).T)"
    ]
   },
   {
@@ -253,23 +261,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "koopman_model = vnet.VAMPNet(lagtime=tau, lobe=lobe).fit(data).fetch_model()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This model can be used to further transform the data, compute timescales and more."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "projection = koopman_model.transform(data)\n",
+    "projection = koopman_model.transform(featurization)\n",
     "dtraj = sktime.clustering.KmeansClustering(2).fit(projection).transform(projection)\n",
     "msm = sktime.markov.msm.MaximumLikelihoodMSM().fit(dtraj, lagtime=1).fetch_model()"
    ]
@@ -282,13 +274,6 @@
    "source": [
     "print(\"estimated transition matrix\", msm.transition_matrix)\n",
     "print(\"reference transition matrix\", data_source.msm.transition_matrix)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The population of states from the data should be roughly 50/50."
    ]
   },
   {
@@ -315,13 +300,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The projection can be visualized (here just the first 550 steps) also comparing to the vanilla estimator:"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -336,16 +314,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(projection[:550][:, 0], label='VAMPNet estimator');\n",
-    "plt.plot(linear_model.transform(data)[:550][:, 0], label='VAMP estimator', linestyle='dotted')\n",
+    "plt.plot(projection[:200][:, 0], label='VAMPNet estimator');\n",
+    "plt.plot(linear_model.transform(data)[:200][:, 0], label='VAMP estimator', linestyle='dotted')\n",
     "plt.legend();"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The estimated timescales are larger then the ones we would have gotten by just using the plain data:"
    ]
   },
   {
@@ -354,8 +325,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print('Ground truth timescale:', data_source.msm.timescales()[0])\n",
     "print('VAMPNet timescale:', koopman_model.timescales()[0])\n",
-    "print('VAMP timescale:', linear_model.timescales()[0])"
+    "print('VAMP timescale:', koopman_model_direct.timescales()[0])"
    ]
   },
   {
@@ -365,7 +337,213 @@
    "outputs": [],
    "source": [
     "print('VAMPNet score:', koopman_model.score())\n",
-    "print('VAMP score:', linear_model.score())"
+    "print('VAMP score:', koopman_model_direct.score())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Alanine dipeptide"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import mdshare"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dihedrals = np.load(mdshare.fetch('alanine-dipeptide-3x250ns-backbone-dihedrals.npz'))['arr_0']\n",
+    "coordinates = np.load(mdshare.fetch('alanine-dipeptide-3x250ns-heavy-atom-positions.npz'))['arr_0']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Tau, how much is the timeshift of the two datasets\n",
+    "tau = 1\n",
+    "\n",
+    "# Batch size for Stochastic Gradient descent\n",
+    "batch_size = 768\n",
+    "\n",
+    "# Which trajectory points percentage is used as training\n",
+    "train_ratio = 0.9\n",
+    "\n",
+    "# How many output states the network has\n",
+    "output_size = 6\n",
+    "\n",
+    "# Iteration over the training set in the fitting process\n",
+    "nb_epoch = 60"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_train = int(np.floor(len(coordinates) * train_ratio))\n",
+    "n_validation = len(coordinates) - tau - n_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = sktime.data.TimeLaggedDataset.from_trajectory(1, coordinates.astype(np.float32))\n",
+    "traj_data_train, traj_data_validation = torch.utils.data.random_split(dataset, [n_train, n_validation])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lobe = nn.Sequential(\n",
+    "    nn.Linear(coordinates.shape[1], 128), nn.ELU(),\n",
+    "    nn.Linear(128, 128), nn.ELU(),\n",
+    "    nn.Linear(128, 128), nn.ELU(),\n",
+    "    nn.Linear(128, 128), nn.ELU(),\n",
+    "    nn.Linear(128, 6), nn.Softmax(dim=1)  # output a probability distribution over 6 states\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vampnet = vnet.VAMPNet(lagtime=tau, lobe=lobe, device=device, learning_rate=5e-4, score_method='VAMPE', \n",
+    "                       score_mode='clamp', dtype=np.float32, epsilon=1e-6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_scores = []\n",
+    "val_scores = []\n",
+    "\n",
+    "def train_callback(step, score):\n",
+    "    train_scores.append((step, score.cpu().numpy()))\n",
+    "def val_callback(step, score):\n",
+    "    np_score = score.cpu().numpy()\n",
+    "    val_scores.append((step, np_score))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vampnet.fit(traj_data_train, batch_size=batch_size, n_epochs=60, \n",
+    "            validation_data=traj_data_validation,\n",
+    "            train_score_callback=train_callback, validation_score_callback=val_callback);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.loglog(*np.array(train_scores).T, label='train')\n",
+    "plt.loglog(*np.array(val_scores).T, label='val')\n",
+    "plt.xlabel('training step')\n",
+    "plt.ylabel('score [a.u.]')\n",
+    "plt.legend();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vampnet_model = vampnet.fetch_model()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Transform the input trajectory using the network\n",
+    "states_prob = vampnet_model.transform(coordinates)\n",
+    "# and transform into discrete states\n",
+    "dtraj = states_prob.argmax(axis=-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cb = plt.scatter(*dihedrals.T, c=dtraj, cmap=plt.cm.get_cmap('plasma', output_size), \n",
+    "                 alpha=.5, s=5, vmin=-.5, vmax=output_size-.5)\n",
+    "cbar = plt.colorbar(cb, ticks=np.arange(output_size))\n",
+    "cbar.ax.set_yticklabels([f\"State {i+1}\" for i in range(output_size)]);\n",
+    "plt.axes = [[-np.pi, np.pi],[-np.pi, np.pi]]\n",
+    "plt.xlabel(r'$\\varphi$ [rad]')\n",
+    "plt.ylabel(r'$\\psi$ [rad]')\n",
+    "plt.title('State assignments on Ramachandran plot');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.pie([np.sum(dtraj==i) for i in range(output_size)], autopct='%1.2f%%', \n",
+    "        labels=[f\"State {i+1}\" for i in range(output_size)])\n",
+    "plt.title('State populations');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "fig, axes = plt.subplots(2, 3, figsize=(15, 10), sharex=True, sharey=True)\n",
+    "fig.suptitle('State probabilities for each of the output states')\n",
+    "\n",
+    "for i, ax in enumerate(axes.flatten()):\n",
+    "    im = ax.hexbin(*dihedrals.T, C=states_prob[:,i], vmin=0, vmax=1, cmap=plt.cm.coolwarm)\n",
+    "    ax.set_title(f\"State {i+1}\")\n",
+    "\n",
+    "    ax.set_xlim([-np.pi, np.pi]);\n",
+    "    ax.set_ylim([-np.pi, np.pi]);\n",
+    "    \n",
+    "    ax.set_xlabel(r'$\\varphi$ [rad]')\n",
+    "    ax.set_ylabel(r'$\\psi$ [rad]')\n",
+    "\n",
+    "norm = mpl.colors.Normalize(vmin=0, vmax=1)\n",
+    "fig.colorbar(plt.cm.ScalarMappable(norm=norm, cmap=plt.cm.coolwarm), ax=axes, shrink=.8);"
    ]
   }
  ],
