laplace kernel and cleanup

--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -455,3 +455,42 @@
   year={2016},
   publisher={APS}
 }
+@article{bowman2009progress,
+  title={Progress and challenges in the automated construction of Markov state models for full protein systems},
+  author={Bowman, Gregory R and Beauchamp, Kyle A and Boxer, George and Pande, Vijay S},
+  journal={The Journal of chemical physics},
+  volume={131},
+  number={12},
+  pages={124101},
+  year={2009},
+  publisher={American Institute of Physics}
+}
+@article{crommelin2009data,
+  title={Data-based inference of generators for Markov jump processes using convex optimization},
+  author={Crommelin, Daan and Vanden-Eijnden, Eric},
+  journal={Multiscale Modeling \& Simulation},
+  volume={7},
+  number={4},
+  pages={1751--1778},
+  year={2009},
+  publisher={SIAM}
+}
+@article{kalbfleisch1985analysis,
+  title={The analysis of panel data under a Markov assumption},
+  author={Kalbfleisch, JD and Lawless, Jerald Franklin},
+  journal={Journal of the American Statistical Association},
+  volume={80},
+  number={392},
+  pages={863--871},
+  year={1985},
+  publisher={Taylor \& Francis}
+}
+@article{davies2010embeddable,
+  title={Embeddable markov matrices},
+  author={Davies, E},
+  journal={Electronic Journal of Probability},
+  volume={15},
+  pages={1474--1486},
+  year={2010},
+  publisher={The Institute of Mathematical Statistics and the Bernoulli Society}
+}
