dmd and doc fixes

--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -494,3 +494,18 @@
   year={2010},
   publisher={The Institute of Mathematical Statistics and the Bernoulli Society}
 }
+@article{schmid2010dynamic,
+  title={Dynamic mode decomposition of numerical and experimental data},
+  author={Schmid, Peter J},
+  journal={Journal of fluid mechanics},
+  volume={656},
+  pages={5--28},
+  year={2010},
+  publisher={Cambridge University Press}
+}
+@article{tu2013dynamic,
+  title={On dynamic mode decomposition: Theory and applications},
+  author={Tu, Jonathan H and Rowley, Clarence W and Luchtenburg, Dirk M and Brunton, Steven L and Kutz, J Nathan},
+  journal={arXiv preprint arXiv:1312.0041},
+  year={2013}
+}
