Fix SINDy citation

--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -509,7 +509,7 @@
   journal={arXiv preprint arXiv:1312.0041},
   year={2013}
 }
-@article{sindy-brunton-2016,
+@article{brunton2016sindy,
   title={Discovering governing equations from data by sparse identification of nonlinear dynamical systems},
   author={Brunton, Steven L and Proctor, Joshua L and Kutz, J Nathan},
   journal={Proceedings of the national academy of sciences},
